Added all components from CodeSandBox

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,13 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  font-family: "Cousine", monospace;
+  display: block;
+  margin: 75px 75px 10px;
+  max-width: 800px;
+  padding: 30px;
+  border: 1px solid #dadde1;
+  border-radius: 20px;
+  background-image: linear-gradient(to top, #fff1eb 0%, #d8f2fe 100%);
+  box-shadow: 10px 10px 5px rgb(205, 205, 205);
+  color: #cc90c8;
+  /*position: relative;*/
 }
