--- a/src/WeatherBody.css
+++ b/src/WeatherBody.css
@@ -9,12 +9,14 @@
 
 .City {
   font-size: 30px;
+  font-weight: 500;
   text-align: center;
   padding: 20px 30px;
 }
 
 .weather-unit {
-  font-size: 15px;
+  font-size: 20px;
+
   position: relative;
   top: -9px;
 }
@@ -46,10 +48,21 @@
   right: 20px;
 }
 
+.search-button {
+  font-size: 15px;
+  font-weight: 600;
+  padding: 10px 30px;
+  line-height: 10px;
+  color: floralwhite;
+  background-color: #cc90c8;
+  border-radius: 30px;
+}
+
 .current-place {
   font-size: 10px;
   padding: 10px 30px;
   line-height: 10px;
+  font-weight: 600;
 
   position: relative;
   right: 30px;
